# sms-broadcast

./: .gitignore  README.md
Desktop App/: CLAUDE.md  SPEC.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Desktop App/src/: index.css  main.tsx  router.tsx
Desktop App/src-tauri/: Cargo.toml  tauri.conf.json
Desktop App/src-tauri/src/: errors.rs  lib.rs  main.rs
Desktop App/src-tauri/src/commands/: campaigns.rs  contacts.rs  lists.rs  mobile_config.rs  mod.rs  settings.rs
Desktop App/src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
Desktop App/src-tauri/src/models/: campaign.rs  contact.rs  list.rs  message_log.rs  mod.rs  shared.rs
Desktop App/src/components/campaigns/: StepIndicator.tsx
Desktop App/src/components/layout/: Layout.tsx  (+3 more)
Desktop App/src/lib/: tauri.ts
Desktop App/src/pages/: CampaignDetail.tsx  Contacts.tsx  Dashboard.tsx  History.tsx  Lists.tsx  NewCampaign.tsx  Pairing.tsx  Settings.tsx
Desktop App/src/schemas/: campaign.schema.ts  contact.schema.ts  list.schema.ts  pairing.schema.ts  settings.schema.ts
Desktop App/src/store/: campaign.store.ts  contacts.store.ts  lists.store.ts  mobile.store.ts  settings.store.ts
Desktop App/src/types/: index.ts
Mobile App/: CLAUDE.md
Mobile App/SmsBroadcast/: App.tsx  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Mobile App/SmsBroadcast/android/: build.gradle  gradle.properties  settings.gradle
Mobile App/SmsBroadcast/ios/: Podfile
Mobile App/SmsBroadcast/src/: App.tsx  global.css
(+62 files in other folders)
